# simd-polyfill

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: lib.rs  test.rs  x86.rs
src/x86/: mmx.rs  sse.rs  sse2.rs  sse3.rs  sse41.rs  ssse3.rs  test.rs
